kustomize/istio-ingress/multinet.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-multicluster-ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*.global"
      port:
        name: tls
        number: 15443
        protocol: TLS
      tls:
        mode: AUTO_PASSTHROUGH
---
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: istio-multicluster-ingressgateway
  namespace: istio-system
spec:
  workloadLabels:
    istio: ingressgateway
  filters:
    - listenerMatch:
        portNumber: 15443
        listenerType: GATEWAY
      insertPosition:
        index: AFTER
        relativeTo: envoy.filters.network.sni_cluster
      filterName: envoy.filters.network.tcp_cluster_rewrite
      filterType: NETWORK
      filterConfig:
        cluster_pattern: "\\.global$"
        cluster_replacement: ".svc.cluster.local"
---
## To ensure all traffic to *.global is using mTLS
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-multicluster-destinationrule
  namespace: istio-system
spec:
  host: "*.global"
  exportTo:
    - '*'
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
