kustomize/istio-ingress/ports.yaml
# This file controls the ports exposed by ingress gateway

---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
spec:
  type: LoadBalancer
  selector:
    app: istio-ingressgateway
  ports:
    -
      name: http2
      port: 80
      targetPort: 80
    -
      name: https
      port: 443
    -
      name: tls
      port: 15443
      targetPort: 15443

---

# Main Gateway. Apps must bind to NAMESPACE/ingressgateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      # Additional ports in gateaway for the ingressPorts - apps using dedicated port instead of hostname
    - port:
        number: 15012
        protocol: TCP
        name: tcp-pilot
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meshexpansion-vs-pilot1
  namespace: istio-system
spec:
  hosts:
    - istiod.istio-system.svc.cluster.local
  gateways:
    - meshexpansion-gateway
  tcp:
    - match:
        - port: 15012
      route:
        - destination:
            host: istiod.istio-system.svc.cluster.local
            port:
              number: 15012
  #  - match:
  #    - port: 53
  #    route:
  #    - destination:
  #        host: kube-dns.kube-system.svc.cluster.local
  #        port:
  #          number: 53
---


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: meshexpansion-dr-pilot9
  namespace: istio-system
spec:
  host: istiod.istio-system.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 15012
        tls:
          mode: DISABLE
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-autogenerated-k8s-ingress
  namespace: istio-system
  labels:
    app: istio-ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
        - "*"
---


# Source: istio-ingress/templates/sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: istio-system
  labels:
    release: istio-system-istio-ingress
spec:
  egress:
    - hosts:
        - "*/*"
